[gd_scene load_steps=60 format=3 uid="uid://m1eikf4kq8bb"]

[ext_resource type="Script" path="res://assets/scenes/secrets/objects/motos_floor.gd" id="1_1i6fy"]
[ext_resource type="Texture2D" uid="uid://bu0xh3r42shc5" path="res://assets/graphics/Motos/gridfloor.png" id="1_fj1s6"]
[ext_resource type="AudioStream" uid="uid://bmxi7vmjn1n8n" path="res://assets/sounds/Motos/sfxFloorDestroy.ogg" id="3_xmpmh"]
[ext_resource type="AudioStream" uid="uid://dc2p7k0c3b6de" path="res://assets/sounds/Motos/sfxMeteorHit.ogg" id="4_e75pf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wugok"]
atlas = ExtResource("1_fj1s6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0cph"]
atlas = ExtResource("1_fj1s6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gmvd"]
atlas = ExtResource("1_fj1s6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pp2b"]
atlas = ExtResource("1_fj1s6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b633x"]
atlas = ExtResource("1_fj1s6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35k7k"]
atlas = ExtResource("1_fj1s6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qycvr"]
atlas = ExtResource("1_fj1s6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqou0"]
atlas = ExtResource("1_fj1s6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfff8"]
atlas = ExtResource("1_fj1s6")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pox24"]
atlas = ExtResource("1_fj1s6")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk8ke"]
atlas = ExtResource("1_fj1s6")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kqta"]
atlas = ExtResource("1_fj1s6")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tjef"]
atlas = ExtResource("1_fj1s6")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr80"]
atlas = ExtResource("1_fj1s6")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcxsi"]
atlas = ExtResource("1_fj1s6")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_81jot"]
atlas = ExtResource("1_fj1s6")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc6u5"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdoah"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o8gk"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdoge"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw0af"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7k7c"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaibd"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a70ml"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi5nj"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_82rpu"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlx1o"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1664, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8vgl"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5nb6"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1792, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfbxu"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1856, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_41h3k"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1920, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_egnjl"]
atlas = ExtResource("1_fj1s6")
region = Rect2(1984, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw737"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2048, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba1yk"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2112, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e57h3"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2176, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix6ol"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2240, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fmqq"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2304, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqr6k"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2368, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xne4"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2432, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_alj76"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2496, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8flb"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2560, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwwg7"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2624, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a1sh"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2688, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_siw0b"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2752, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg0f0"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2816, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33p63"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2880, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t34r"]
atlas = ExtResource("1_fj1s6")
region = Rect2(2944, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5j8l"]
atlas = ExtResource("1_fj1s6")
region = Rect2(3008, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihtvi"]
atlas = ExtResource("1_fj1s6")
region = Rect2(3072, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fue3"]
atlas = ExtResource("1_fj1s6")
region = Rect2(3136, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyhfk"]
atlas = ExtResource("1_fj1s6")
region = Rect2(3200, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_125gj"]
atlas = ExtResource("1_fj1s6")
region = Rect2(3264, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jw7r"]
atlas = ExtResource("1_fj1s6")
region = Rect2(3328, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk6c0"]
atlas = ExtResource("1_fj1s6")
region = Rect2(3392, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kofp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wugok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0cph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gmvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pp2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b633x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35k7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qycvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqou0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfff8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pox24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk8ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kqta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tjef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcxsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81jot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc6u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdoah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o8gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdoge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw0af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7k7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaibd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a70ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi5nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82rpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlx1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8vgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5nb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfbxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41h3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egnjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw737")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba1yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e57h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix6ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fmqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqr6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xne4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alj76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8flb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwwg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a1sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siw0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg0f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33p63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t34r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5j8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihtvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fue3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyhfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_125gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jw7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk6c0")
}],
"loop": false,
"name": &"default",
"speed": 35.0
}]

[node name="MotosFloor" type="Marker2D"]
modulate = Color(1, 0.501961, 0.501961, 0.745098)
script = ExtResource("1_1i6fy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, 4.76837e-07)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_7kofp")

[node name="Sounds" type="Node" parent="."]

[node name="sfxDestroy" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_xmpmh")

[node name="sfxDestroy2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_e75pf")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
